local, 운영 분기시도