@@ -10,6 +10,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -20,6 +21,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 @Component // Spring이 관리하는 Bean으로 등록
@@ -64,7 +66,12 @@ public class JwtCookieAuthFilter extends OncePerRequestFilter {
             if (optionalUser.isPresent()) {
                 UserEntity userEntity = optionalUser.get();
 
-                UserDetails userDetails = new User(userEntity.getEmail(), "", Collections.emptyList());
+                UserDetails userDetails = new User(
+                        userEntity.getEmail(),
+                        "",
+//                        Collections.emptyList() // 임시로 주석처리
+                        List.of(new SimpleGrantedAuthority("ROLE_USER")) // ✅ 권한 부여 임시로 주석처리하면서 넣음
+                );
 
                 UsernamePasswordAuthenticationToken authToken =
                         new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
